--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "alsaba-cash",
+  "name": "e-school",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && electron-builder",
     "preview": "vite preview",
-    "test:unit": "vitest --environment jsdom",
-    "rebuild:db-driver": "electron-rebuild -f -w better-sqlite3"
+    "web-test:unit": "vitest",
+    "rebuild:db-driver": ".\\node_modules\\.bin\\electron-rebuild.cmd -f -w better-sqlite3"
   },
   "dependencies": {
     "better-sqlite3": "^9.6.0",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
+    "@electron/rebuild": "^3.7.0",
     "@iconify-json/bi": "^1.1.23",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ep": "^1.1.15",
@@ -21,15 +22,19 @@
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/vaadin": "^1.1.9",
     "@iconify/vue": "^4.1.1",
+    "@types/lodash": "^4.17.12",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/devtools": "^7.0.25",
+    "chart.js": "^4.4.5",
+    "date-fns": "^4.1.0",
     "electron": "^29.1.4",
     "electron-builder": "^24.13.3",
-    "electron-rebuild": "^3.2.9",
-    "element-plus": "^2.6.2",
-    "i18n-iso-countries": "^7.11.0",
+    "electron-vite": "^2.3.0",
+    "element-plus": "^2.8.6",
+    "i18n-iso-countries": "^7.12.0",
     "jsdom": "^24.0.0",
-    "typeorm": "^0.3.20",
+    "reflect-metadata": "^0.2.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-element-plus": "^0.8.0",
@@ -37,11 +42,12 @@
     "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.4",
-    "vite-plugin-electron-renderer": "^0.14.5",
+    "vite-plugin-electron-renderer": "^0.14.6",
+    "vite-plugin-externalize-deps": "^0.8.0",
     "vitest": "^1.4.0",
-    "vue": "^3.4.21",
-    "vue-router": "^4.3.0",
-    "vue-tsc": "^1.8.27"
+    "vue-chartjs": "^5.3.1",
+    "vue-router": "^4.4.5",
+    "vue-tsc": "^2.1.6"
   },
   "main": "dist-electron/main.js"
 }
