--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.7",
     "csv-parser": "^3.0.0",
     "date-fns": "^4.1.0",
+    "echarts": "^5.5.1",
     "electron-print-preview": "^2.2.0",
     "electron-printer": "^0.0.5",
     "html2pdf.js": "^0.10.2",
@@ -23,6 +24,7 @@
     "puppeteer": "^23.10.4",
     "qrcode.vue": "^3.6.0",
     "typeorm": "^0.3.20",
+    "vue-echarts": "^7.0.3",
     "whatsapp-web.js": "^1.26.0",
     "xlsx": "^0.18.5"
   },
