--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "puppeteer": "^23.10.4",
     "qrcode.vue": "^3.6.0",
     "typeorm": "^0.3.20",
+    "vue-chartjs": "^5.3.2",
     "vue-echarts": "^7.0.3",
     "whatsapp-web.js": "^1.26.0",
     "xlsx": "^0.18.5"
