--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "qrcode.vue": "^3.6.0",
     "typeorm": "^0.3.20",
     "vue-chartjs": "^5.3.2",
+    "vue-html-to-paper": "^2.0.3",
     "whatsapp-web.js": "^1.26.0",
     "xlsx": "^0.18.5"
   },
