--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "alsaba-cash",
+  "name": "eschool",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build && electron-builder",
@@ -10,22 +10,9 @@
     "rebuild:db-driver": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
-    "@mdi/js": "^7.4.47",
-    "alsaba-cash": "file:",
     "better-sqlite3": "^9.6.0",
-    "chart.js": "^4.4.7",
-    "csv-parser": "^3.0.0",
-    "date-fns": "^4.1.0",
     "electron-print-preview": "^2.2.0",
-    "html2pdf.js": "^0.10.2",
-    "pinia": "^2.3.0",
-    "print-js": "^1.6.0",
-    "qrcode.vue": "^3.6.0",
-    "typeorm": "^0.3.20",
-    "vue-chartjs": "^5.3.2",
-    "vue-html-to-paper": "^2.0.3",
-    "whatsapp-web.js": "^1.26.0",
-    "xlsx": "^0.18.5"
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@iconify-json/bi": "^1.1.23",
@@ -35,15 +22,22 @@
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/vaadin": "^1.1.9",
     "@iconify/vue": "^4.1.1",
+    "@mdi/js": "^7.4.47",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/devtools": "^6.6.4",
+    "chart.js": "^4.4.7",
+    "csv-parser": "^3.0.0",
+    "date-fns": "^4.1.0",
     "electron": "^29.4.6",
     "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
     "element-plus": "^2.6.2",
+    "html2pdf.js": "^0.10.2",
     "i18n-iso-countries": "^7.11.0",
     "jsdom": "^24.0.0",
-    "typeorm": "^0.3.20",
+    "pinia": "^2.3.0",
+    "print-js": "^1.6.0",
+    "qrcode.vue": "^3.6.0",
     "typescript": "^5.2.2",
     "unplugin-auto-import": "^0.17.5",
     "unplugin-element-plus": "^0.8.0",
@@ -54,8 +48,12 @@
     "vite-plugin-electron-renderer": "^0.14.5",
     "vitest": "^1.4.0",
     "vue": "^3.4.21",
+    "vue-chartjs": "^5.3.2",
+    "vue-html-to-paper": "^2.0.3",
     "vue-router": "^4.3.0",
-    "vue-tsc": "^2.1.10"
+    "vue-tsc": "^2.1.10",
+    "whatsapp-web.js": "^1.26.0",
+    "xlsx": "^0.18.5"
   },
   "main": "dist-electron/main.js"
 }
