--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "better-sqlite3": "^9.6.0",
     "electron-print-preview": "^2.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -33,7 +35,7 @@
     "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
     "element-plus": "^2.6.2",
-    "html2pdf.js": "^0.10.2",
+    "html2pdf.js": "^0.10.3",
     "i18n-iso-countries": "^7.11.0",
     "jsdom": "^24.0.0",
     "pinia": "^2.3.0",
