--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sync-types": "robocopy electron/backend/types src/types /E /PURGE"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "better-sqlite3": "^11.9.1",
     "electron-print-preview": "^2.2.0",
     "html2canvas": "^1.4.1",
