--- a/package.json
+++ b/package.json
@@ -7,22 +7,19 @@
     "build": "vue-tsc --noEmit && vite build && electron-builder",
     "preview": "vite preview",
     "test:unit": "vitest --environment jsdom",
-    "rebuild:db-driver": "electron-rebuild -f -w better-sqlite3",
-    "sync-types": "robocopy electron/backend/types src/types /E /PURGE"
+    "rebuild:db-driver": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.49.4",
-    "better-sqlite3": "^11.9.1",
+    "bcrypt": "^6.0.0",
+    "better-sqlite3": "^9.6.0",
     "electron-print-preview": "^2.2.0",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^3.0.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@iconify-json/bi": "^1.1.23",
     "@iconify-json/carbon": "^1.1.31",
     "@iconify-json/ep": "^1.1.15",
-    "@iconify-json/mdi": "^1.2.3",
+    "@iconify-json/mdi": "^1.1.64",
     "@iconify-json/ri": "^1.1.20",
     "@iconify-json/vaadin": "^1.1.9",
     "@iconify/vue": "^4.1.1",
@@ -36,7 +33,7 @@
     "electron-builder": "^24.13.3",
     "electron-rebuild": "^3.2.9",
     "element-plus": "^2.6.2",
-    "html2pdf.js": "^0.10.3",
+    "html2pdf.js": "^0.10.2",
     "i18n-iso-countries": "^7.11.0",
     "jsdom": "^24.0.0",
     "pinia": "^2.3.0",
@@ -56,7 +53,6 @@
     "vue-html-to-paper": "^2.0.3",
     "vue-router": "^4.3.0",
     "vue-tsc": "^2.1.10",
-    "whatsapp-web.js": "^1.26.0",
     "xlsx": "^0.18.5"
   },
   "main": "dist-electron/main.js"
