--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
     "checkJs": false,
+    "types": ["electron", "node"],
     "typeRoots": ["./node_modules/@types", "./src/types"],
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -37,6 +38,6 @@
     "electron",
     "auto-imports.d.ts",
     "node_modules/unplugin-auto-import/auto-imports.d.ts"
-  ],
+, "app"  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
