--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcryptjs": "^3.0.2",
     "better-sqlite3": "^9.6.0",
     "electron-print-preview": "^2.2.0",
+    "node-machine-id": "^1.1.12",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
