--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ dist-electron
 release
 *.local
 
+# Environment variables
+.env
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -24,5 +27,6 @@ release
 *.njsproj
 *.sln
 *.sw?
+
 
 
