--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "rebuild:db-driver": "electron-rebuild -f -w better-sqlite3"
   },
   "dependencies": {
-    "reflect-metadata": "^0.1.13",
     "@supabase/supabase-js": "^2.49.4",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.2",
@@ -22,6 +21,7 @@
     "dotenv": "^16.5.0",
     "electron-print-preview": "^2.2.0",
     "node-machine-id": "^1.1.12",
+    "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -34,8 +34,11 @@
     "@iconify-json/vaadin": "^1.1.9",
     "@iconify/vue": "^4.1.1",
     "@mdi/js": "^7.4.47",
+    "@pinia/testing": "^0.0.14",
+    "@types/jsdom": "^21.1.7",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/devtools": "^6.6.4",
+    "@vue/test-utils": "^2.4.6",
     "chart.js": "^4.4.7",
     "csv-parser": "^3.0.0",
     "date-fns": "^4.1.0",
@@ -45,7 +48,7 @@
     "element-plus": "^2.6.2",
     "html2pdf.js": "^0.10.2",
     "i18n-iso-countries": "^7.11.0",
-    "jsdom": "^24.0.0",
+    "jsdom": "^24.1.3",
     "pinia": "^2.3.0",
     "print-js": "^1.6.0",
     "qrcode.vue": "^3.6.0",
@@ -57,7 +60,7 @@
     "vite": "^5.1.6",
     "vite-plugin-electron": "^0.28.4",
     "vite-plugin-electron-renderer": "^0.14.5",
-    "vitest": "^1.4.0",
+    "vitest": "^1.6.1",
     "vue": "^3.4.21",
     "vue-chartjs": "^5.3.2",
     "vue-html-to-paper": "^2.0.3",
