--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "better-sqlite3": "^9.6.0",
     "dotenv": "^16.5.0",
     "electron-print-preview": "^2.2.0",
+    "electron-store": "^10.1.0",
     "node-machine-id": "^1.1.12",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.20"
